# Pre-Approval-AI-Verification-Tool

./: .env.example  .gitignore  AI-CONVERSATION.md  README.md  log.md  pyproject.toml
TestCases/case1/: report.json
TestCases/case9/: report-a005af168e.html
config/: checklist_schema.json
config/checklists/: appeals.yaml  coaching.yaml  community-classes.yaml  hri.yaml  memberships.yaml  otps.yaml  transition-program.yaml
docs/: acceptance-criteria-checklist.md  limitations-and-assumptions.md  ux-and-evidence-integrity.md
docs/ai-transcripts/: claude-code-build-transcript.md  gptchat_raw_project_thread.md
output/samples/sample-01-gallopnyc/: evidence-manifest.json  report.html  (+1 more)
scripts/: run_sample.py
tests/e2e/: test_sample01_acceptance.py
tests/integration/: test_cookie_banner_suppression.py  test_export_package.py  test_manage_checklists_routes.py  test_pdf_export.py  test_reviewer_action_buttons.py
tests/schema/: test_checklist_schema.py
tests/security/: test_export_validation.py  test_upload_validation.py  test_url_guard.py
tests/unit/: test_appeal_consistency_regression.py  test_blocked_detection.py  test_checkbox_parser.py  test_draft_builder.py  test_error_messages.py  test_evaluator_smart_features.py  test_evidence_provenance_regression.py  test_exclusion_list.py  test_exclusion_list_regression.py  test_fee_match_cap.py  test_fee_match_diagnostic.py  test_finding_invariant.py  test_link_discovery.py  test_link_ranker.py  test_low_text_extraction_safety.py  test_report_display_title.py  test_report_summary.py  test_text_utils.py
(+75 files in other folders)
