[project]
name = "preapproval-tool"
version = "0.1.0"
description = "AI-assisted website-verification tool for OPWDD pre-approval applications"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "pdfplumber>=0.11",
    "pypdf>=5.0",
    "playwright>=1.48",
    "firecrawl-py>=1.5",
    "openai>=1.54",
    "pillow>=11.0",
    "python-dotenv>=1.0",
    "jsonschema>=4.23",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/preapproval_tool"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: requires real network/DNS access",
    "e2e: full live pipeline test — costs real OpenAI/Firecrawl API usage, opt-in only",
]
